--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,7 @@
       href="https://bootswatch.com/4/solar/bootstrap.min.css"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>SpaceX Discover</title>
+    <title>SpaceX Discovery</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
