--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,14 @@
       rel="stylesheet"
       href="https://bootswatch.com/4/solar/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>SpaceX Discovery</title>
   </head>
