--- a/client/public/index.html
+++ b/client/public/index.html
@@ -57,6 +57,8 @@
     <!-- Custom scripts for this template -->
     <script src="js/new-age.min.js"></script>
 
+    <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>SpaceX Discovery</title>
   </head>
